# snake-game-coursework

./: CMakeLists.txt  DigitDisplay.qml  GameButton.qml  GameScene.qml  Main.qml  MainMenu.qml  gamecontroller.cpp  gamecontroller.h  main.cpp  resources.qrc
